--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -665,8 +665,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
