--- a/index.ipynb
+++ b/index.ipynb
@@ -1066,10 +1066,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1077,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1084,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,28 +1102,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Toronto',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Solta',\n",
        " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
        " 'Pyeongchang',\n",
        " 'Los Cabos',\n",
        " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
+       " 'Salina Island',\n",
+       " 'San Antonio',\n",
        " 'Greenville',\n",
        " 'Albuquerque',\n",
-       " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Marakesh',\n",
+       " 'Iguazu Falls']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
